# ai_tax_advisor

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  tax.py
backend/app/core/: config.py  logging.py
backend/app/integrations/: openai_client.py
backend/app/schemas/: tax_form.py
backend/app/services/: prompts.py  tax_advice.py
backend/tests/: conftest.py  test_health.py  test_tax.py  test_tax_advice.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/layout/: Footer.module.css  Footer.tsx  Header.module.css  Header.tsx  Layout.module.css  Layout.tsx
frontend/src/features/home/: HomePage.module.css  HomePage.tsx
frontend/src/features/tax-form/: TaxFormPage.module.css  TaxFormPage.tsx
frontend/src/features/tax-form/api/: taxApi.ts
frontend/src/features/tax-form/components/: FormField.module.css  FormField.tsx  TaxForm.module.css  TaxForm.tsx  TaxSummary.module.css  TaxSummary.tsx  describedBy.ts
frontend/src/features/tax-form/schema/: taxForm.schema.ts
frontend/src/lib/: format.ts  useSessionStorage.ts
frontend/src/routes/: NotFoundPage.module.css  NotFoundPage.tsx  router.tsx
frontend/src/styles/: globals.css
