[project]
name = "ai-tax-advisor"
version = "0.1.0"
description = "AI-powered web application that provides intelligent tax advice through a modern full-stack architecture and integrated AI services."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgi-correlation-id>=4.3.4",
    "fastapi[standard]>=0.136.1",
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "respx>=0.23.1",
    "ruff>=0.15.11",
]

# ---------- Ruff (linter + formatter) ----------
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
    "N",        # pep8-naming
    "C4",       # flake8-comprehensions
    "RUF",      # ruff-specific rules
    "ASYNC",    # flake8-async
    "S",        # flake8-bandit (security)
]
ignore = [
    "S101",     # assert used — fine σε tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]   # χαλαρώνουμε security + bugbear στα tests

[tool.ruff.format]
quote-style = "double"

# ---------- mypy (static type checker) ----------
[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_unused_ignores = true
pretty = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false   # tests δε χρειάζονται type annotations παντού

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

# ---------- coverage ----------
[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
show_missing = true
